@@ -147,7 +147,8 @@ Summary of important user-visible changes for version 4.2:
     compiled in to debug versions of a MEX file, i.e., that are produced
     when the '-g' option is given to mex() or mkoctfile().
 
- ** Other new MEX API functions include mexEvalStringWithTrap.
+ ** Other new MEX API functions include mexEvalStringWithTrap,
+    mxIsScalar.
 
  ** Other new functions added in 4.2:
 
